--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>ARKAN||ID</title>
+  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
-  template
+
+  <div id="loading">
+    <svg class="loader" width="64" height="64">
+      <circle cx="32" cy="16" r="16" fill="red" />
+      <circle cx="46" cy="40" r="16" fill="green" />
+      <circle cx="18" cy="40" r="16" fill="blue" />
+      <circle cx="32" cy="32" r="20" fill="white" />
+    </svg>
+    <span class="text-centered">Loading...</span>
+  </div>
+
 </body>
 </html>
