Playable run. Bug fixes
Changes:
modified:   src/Ball.js
modified:   src/Brick.js
modified:   src/Capsule.js
modified:   src/Laser.js
modified:   src/draw.js
modified:   src/index.css
modified:   src/index.html
modified:   src/index.js
modified:   src/init.js
modified:   src/listeners.js
modified:   src/options.js
modified:   src/sounds.js
modified:   src/source.js
modified:   src/utils.js

--- a/src/index.html
+++ b/src/index.html
@@ -59,12 +59,13 @@
   </div>
 
   <div id="game-controls">
+    <br><br>
+    <div class="line-under"><button class="back-btn btn">◄BACK</button></div>
     <span><br><br>
       You can move the platform to the left by pressing ◄ button below || by pushing ◄ button on your keyboard || by tilting your device in this ◄ way (you must first enable it in the options).<br><br>
       Also you can move the platform to the right by pressing ► button below || by pushing ► button on your keyboard || by tilting your device in this ► way (you must first enable it in the options).<br><br>
       You can even cast the ball || shoot the laser by pressing ▲ button below || by pushing ▲ button on your keyboard.
-    </span><br><br>
-    <div class="line-under"><button class="back-btn btn">◄BACK</button></div>
+    </span>
   </div>
 
   <div id="game-options"><br>
@@ -85,17 +86,19 @@
         Volume settings:
       </span><br><br>
       <input type="radio" name="volume" data-value="0.2" id="volume-02" class="volume-radio">
-      <label for="volume-02" class="volume-label option">volume: ■■□□□□□□□□ (0.2)</label><br>
+      <label for="volume-02" class="volume-label option">volume: ▓▓░░░░░░░░ (0.2)</label><br>
       <input type="radio" name="volume" data-value="0.5" id="volume-05" class="volume-radio" checked>
-      <label for="volume-05" class="volume-label option">volume: ■■■■■□□□□□ (0.5)</label><br>
+      <label for="volume-05" class="volume-label option">volume: ▓▓▓▓▓░░░░░ (0.5)</label><br>
       <input type="radio" name="volume" data-value="0.7" id="volume-07" class="volume-radio">
-      <label for="volume-07" class="volume-label option">volume: ■■■■■■■□□□ (0.7)</label><br>
+      <label for="volume-07" class="volume-label option">volume: ▓▓▓▓▓▓▓░░░ (0.7)</label><br>
       <input type="radio" name="volume" data-value="1.0" id="volume-10" class="volume-radio">
-      <label for="volume-10" class="volume-label option">volume: ■■■■■■■■■■ (1.0)</label>
+      <label for="volume-10" class="volume-label option">volume: ▓▓▓▓▓▓▓▓▓▓ (1.0)</label>
     </form><br><br>
   </div>
 
   <div id="game-about">
+    <br><br>
+    <div class="line-under"><button class="back-btn btn">◄BACK</button></div>
     <span><br><br>
       Author:<br>
       Game created by OlegOsh 2020<br>
@@ -110,15 +113,14 @@
       <a href="https://www.sololearn.com/">
         https://www.sololearn.com/
       </a>
-    </span><br><br>
-    <div class="line-under"><button class="back-btn btn">◄BACK</button></div>
+    </span>
   </div>
 
   <div id="game-over">
     <span class="line-under"><br><br>
       GAME OVER
     </span><br><br>
-    <div class="line-under"><button class="btn" id="restart" onclick="reinit();">◄MENU</button></div>
+    <div class="line-under"><button class="btn" id="restart">◄MENU</button></div>
   </div>
 
   <div id="game-options-min">
